cmake_minimum_required(VERSION 3.8)
project(GFX_PROJECT)

IF (APPLE)
    find_package(OpenGL REQUIRED)
    find_package(GLUT REQUIRED)
    find_library(CoreServices CoreServices)
    find_library(CoreFoundation CoreFoundation)
    find_library(AudioUnit AudioUnit)
    find_library(AudioToolbox AudioToolbox)
    find_library(CoreAudio CoreAudio)
    include_directories(${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIRS})
ENDIF (APPLE)

set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES main.cpp Engine/Audio/AudioManager.cpp Game/AudioPlayer.cpp Game/GameManager.cpp Models/Scence.cpp Models/DartGoblin.cpp Models/DartGoblin.h TextureBuilder.cpp Models/Fence.cpp Models/Fence.h Models/Rocket.cpp Models/Rocket.h Models/Log.cpp Models/Log.h Models/AABB.cpp Models/AABB.h Game/GameState.cpp Game/GameState.h Models/Balloon.cpp Models/Balloon.h Models/Potions.cpp Models/Potions.h)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/Engine/Audio)
set(HEADER TextureBuilder.h)
file(MAKE_DIRECTORY Content)
file(MAKE_DIRECTORY Content/Textures)
file(MAKE_DIRECTORY Content/Sounds)
include_directories(Models)
file(COPY Content DESTINATION ./)
add_executable(GFX_PROJECT ${SOURCE_FILES})
target_link_libraries(GFX_PROJECT ${CoreAudio} ${CoreFoundation} ${CoreServices} ${AudioUnit} ${AudioToolbox}
        ${} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})